--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-ui",
+  "name": "ataraxia-coin",
   "author": "isaias@artikaweb.com",
   "version": "0.1.0",
   "private": true,
@@ -12,14 +12,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-syntax-highlighter": "^15.4.3",
-    "web-vitals": "^1.1.2"
+    "truffle": "^5.3.12",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
